--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,38 @@ body {
     font-size: 16px;
 }
 img {
-    width: 20%;
+    width: 60%;
 }
 
 .main-container {
     display: flex;
+}
+
+.profile1,
+.profile2,
+.profile3,
+.profile4 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    background-color: #f0f0f0;
+    padding: 20px;
+    flex-direction: column;
+    flex-wrap: wrap;;
+}
+
+.container-one,
+.container-two,
+.container-three,
+.container-four {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    background-color: #f0f0f0;
+    padding: 20px;
 }
 
